; ModuleID = '/home/carl/AnghaBench/openssl/apps/extr_s_client.c_base64encode.c'
source_filename = "/home/carl/AnghaBench/openssl/apps/extr_s_client.c_base64encode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [21 x i8] c"base64 encode buffer\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*, i64)* @base64encode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @base64encode(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  %8 = load i64, i64* %4, align 8
  %9 = udiv i64 %8, 3
  store i64 %9, i64* %6, align 8
  %10 = load i64, i64* %4, align 8
  %11 = urem i64 %10, 3
  %12 = icmp ugt i64 %11, 0
  br i1 %12, label %13, label %16

13:                                               ; preds = %2
  %14 = load i64, i64* %6, align 8
  %15 = add i64 %14, 1
  store i64 %15, i64* %6, align 8
  br label %16

16:                                               ; preds = %13, %2
  %17 = load i64, i64* %6, align 8
  %18 = shl i64 %17, 2
  store i64 %18, i64* %6, align 8
  %19 = load i64, i64* %6, align 8
  %20 = add i64 %19, 1
  %21 = call i8* @app_malloc(i64 %20, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0))
  store i8* %21, i8** %7, align 8
  %22 = load i8*, i8** %7, align 8
  %23 = load i8*, i8** %3, align 8
  %24 = load i64, i64* %4, align 8
  %25 = call i32 @EVP_EncodeBlock(i8* %22, i8* %23, i64 %24)
  store i32 %25, i32* %5, align 4
  %26 = load i32, i32* %5, align 4
  %27 = load i64, i64* %6, align 8
  %28 = trunc i64 %27 to i32
  %29 = icmp sle i32 %26, %28
  %30 = zext i1 %29 to i32
  %31 = call i32 @assert(i32 %30)
  %32 = load i32, i32* %5, align 4
  %33 = icmp slt i32 %32, 0
  br i1 %33, label %34, label %36

34:                                               ; preds = %16
  %35 = load i8*, i8** %7, align 8
  store i8 0, i8* %35, align 1
  br label %36

36:                                               ; preds = %34, %16
  %37 = load i8*, i8** %7, align 8
  ret i8* %37
}

declare dso_local i8* @app_malloc(i64, i8*) #1

declare dso_local i32 @EVP_EncodeBlock(i8*, i8*, i64) #1

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
